--- a/style.css
+++ b/style.css
@@ -17,10 +17,14 @@ body {
 }
 
 .header ul {
-    color: #E5E7EB;
-    font-size: 18px;
     list-style: none;
     display: flex;
     justify-content: center;
     gap: 24px;
+}
+
+.header a {
+    color: #E5E7EB;
+    font-size: 18px;
+    text-decoration: none;
 }
