--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .header h2 {
-    color: #F9FAF8;
+    color:#F9FAF8 ;
     font-size: 24px;
 
 }
@@ -27,4 +27,12 @@ body {
     color: #E5E7EB;
     font-size: 18px;
     text-decoration: none;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
 }
