--- a/style.css
+++ b/style.css
@@ -75,6 +75,16 @@ body {
     justify-content: center;
 }
 
+.boxes {
+    margin: 0px 15%;
+}
+
+.boxes h3 {
+    font-weight: bolder;
+    font-size: 36px;
+    color: #1F2937;
+    text-align: center;
+}
 
 .footer {
     background-color: #1F2937;
