--- a/style.css
+++ b/style.css
@@ -86,6 +86,30 @@ body {
     text-align: center;
 }
 
+.boxes-container {
+    display: flex;
+    gap: 40px;
+}
+
+.boxes-container div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.boxes-container div img {
+    height: 120px;
+    border-radius: 25px;
+    border: 2px solid #3882F6;
+    margin-bottom: 10px;
+}
+
+.boxes-container p {
+    text-align: center;
+    margin-top: 0px;
+}
+
 .footer {
     background-color: #1F2937;
     color: #E5E7EB;
