--- a/style.css
+++ b/style.css
@@ -100,11 +100,12 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
 }
 
 .boxes-container div img {
     height: 200px;
+    width: 200px;
     border-radius: 25px;
     border: 2px solid #3882F6;
     margin-bottom: 10px;
