--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: sans-serif;
     margin: 0;
-    background-color: #1F2937;
 }
 
 .header {
@@ -121,6 +120,7 @@ body {
 
 .quote {
     padding: 120px 20%;
+    margin-bottom: 0px;
     background-color: #E5E7EB;
     color: #1F2937;
 }
@@ -135,6 +135,46 @@ body {
     text-align: right;
     font-weight: bolder;
     font-size: 36px;
+}
+
+.sign-up {
+    background-color: white;
+    margin-top: 0px;
+}
+
+.sign-up-box {
+    display: flex;
+    margin: 10% 15%;
+}
+
+.sign-up-box div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882F6;
+    color: white;
+    padding: 5% 15%;
+}
+
+.sign-up-box h3 {
+    align-self: flex-start;
+    margin-bottom: 2px;
+    font-weight: bolder;
+}
+
+.sign-up-text {
+    flex: 3;
+}
+
+.sign-up-button-div {
+    flex: 1;
+}
+
+.sign-up-box p {
+    margin-top: 2px;
+    align-self: flex-start;
 }
 
 .footer {
