--- a/style.css
+++ b/style.css
@@ -145,21 +145,15 @@ body {
 .sign-up-box {
     display: flex;
     margin: 10% 15%;
-}
-
-.sign-up-box div {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+    background-color: #3882F6;
+    padding: 2% 10%;
+    color: white;
     justify-content: center;
     align-items: center;
-    background-color: #3882F6;
-    color: white;
-    padding: 5% 15%;
+    border-radius: 10px;
 }
 
 .sign-up-box h3 {
-    align-self: flex-start;
     margin-bottom: 2px;
     font-weight: bolder;
 }
@@ -172,9 +166,18 @@ body {
     flex: 1;
 }
 
+.sign-up-btn-div button {
+    border-radius: 10px;
+    color: white;
+    background-color: #3882F6;
+    border: 2px solid white;
+    font-weight: bold;
+    padding: 5px 15px;
+    font-size: 18px;
+}
+
 .sign-up-box p {
     margin-top: 2px;
-    align-self: flex-start;
 }
 
 .footer {
